2008-10-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefield*.h: Fix MakeNewInstance().

2008-10-20  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/CMakeLists.txt: Add gen2D.cpp and mcdlutil.cpp
	
	* src/mcdlutil.cpp: Replace all calls to abs(double) with fabs(double)

	* src/formats/MCDLformat.cpp: Replace string.npos with string::npos

2008-10-20  Chris Morley
	
	* include/openbabel/mcdlutil.h, src/mcdlutil.cpp: New files
	which use MCDL library to generate 2D coordinates
	
	* src/formats/MCDLformat.cpp: some code moved to the above files.
	
	* src/ops/gen2D.cpp: wrapper op for --gen2d 
	
	* data/templates.sdf: New file with example template
	
	* src/transform.cpp: help on --sort and --revsort

2008-10-20  Chris Morley
	 
	* include/openbabel/obmolecformat.h, src/obmolecformat.cpp:
	New functions to sort molecules, Sort(), OutputSortedMols()
	and LessThan()
	
	* include/openbabel/descriptor.h, src/descriptor.cpp: New
	virtual function LessThan() and default implementation.
	Make several error messages once only.
	
	* src/descriptors/filters.cpp: Add LessThan functions for TitleFilter
	and more complex one + GetCachedValue() + Init() for InChIFilter.
	 
	* include/openbabel/plugin.h: Add virtual funtion Init() 


	* include/openbabel/mol.h, src/mol.cpp: extra flag to indicate
	is a pattern, not a complete molecule. SetIsPatternStructure()
	Previously described, but somehow not committed.


2008-10-17  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: in OBForceField::GetGrid(), calculate grid size 
	before adding probe atom. 

2008-10-17  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/chains.h, src/chains.cpp: some changes from
	experimental branch, mainly documentation and some bug fixes.

	* src/formats/atomrecord.cpp: Interpret HG11, HE11, ... as hydrogen
	atoms at position gamma and epsilon. Previously these atom ids were